* Added ZLIF support into core.
* Added core settings: UseADLOnlyOnOwnList, AllowUploadOverMultiHubs, AllowSimUploads.
* Added ability to build the program with miniupnpc version 1.6. Support for version 1.5 saved. The local copy of miniupnpc is updated to version 1.6.
* Fixed program crash when using of changed value of IpTOSValue (default -1) without root privileges.
*** eiskaltdcpp-qt ***
* Refactoring of source code. Regression are possible.
* Now GCC >= 4.5.0 is required for build. (Possibilities from c++0x are used)
* Fixed build in Haiku OS. System algorithm to test run only one instance of the program is used now.
* A lot of new methods now available using QtScript. See:
  http://code.google.com/p/eiskaltdc/wiki/Scripting
  http://code.google.com/p/eiskaltdc/wiki/Scripting_QtScript_Example_Scripts
  http://code.google.com/p/eiskaltdc/wiki/Scripting_Working_With_QtScript
  [Thanks to OmegaPhil for an updated documentation]
* Hot reloading of scripts (QtScript) when they have been changed.
* Dialog of scripting (QtScript) is appreciably improved.
*** eiskaltdcpp-gtk ***
* Support of builds with Gtk < 2.24 was discontinued.
* Added ability to build with Gtk3 (option -DUSE_GTK3 for cmake). This is an experimental mode. Various shortcomings are possible.
*** eiskaltdcpp-daemon ***
* Added command line options: --verbose, --ip, --port, --rpclog, --uripath
* Added JSON interface. More detail: http://code.google.com/p/eiskaltdc/wiki/JSONRPC
*** eiskaltdcpp-cli ***

--- 2.2.4 2011-10-02 ---
*** common changes ***
* Partial synchronization with DC++ kernel (0.785).
* Now GCC >= 4.4.0 is required for build.
* Added support for DHT (http://www.adcportal.com/wiki/StrongDC++_DHT). This option is disabled in the settings by default. It is possible to completely remove support for DHT during configuration (option -DWITH_DHT for cmake). DHT requires white external IPv4 for a work. See also: http://en.wikipedia.org/wiki/Distributed_hash_table
* Fixed build in Mac OS X.