@@ -5,6 +5,7 @@
 * Добавлены опции ядра: UseADLOnlyOnOwnList, AllowUploadOverMultiHubs, AllowSimUploads.
 * Добавлена возможность сборки с miniupnpc версии 1.6. Поддержка версии 1.5 сохранена. Локальная копия miniupnpc обновлена до версии 1.6.
 * Исправлено падение программы при использовании измененного значения IpTOSValue (по умолчанию -1) без прав суперпользователя.
+* Добавлено распознавание дополнительных полей из файл-листов FlylinkDC++: битрейты аудио, видео и разрешение.
 *** eiskaltdcpp-qt ***
 * Рефакторинг исходного кода. Возможны регрессии.
 * Теперь для сборки требуется GCC >= 4.5.0. (Используются возможности c++0x)
@@ -16,9 +17,13 @@
   [Спасибо OmegaPhil за обновленную документацию]
 * Горячая перезагрузка скриптов (QtScript), когда они изменяются.
 * Диалог работы со скриптами (QtScript) существенно улучшен.
+* Улучшен способ сортировки в виджете поискового шпиона. [Спасибо Mikhail Krasikau]
+* Добавлено распознавание дополнительных полей из файл-листов FlylinkDC++: битрейты аудио, видео и разрешение. Информация отображается в тултипе для файла.
+* Добавлена возможность очистки поисковой истории и истории каталогов загрузки при выходе или вручную.
 *** eiskaltdcpp-gtk ***
 * Поддержка сборки с Gtk < 2.24 прекращена.
 * Добавлена возможность сборки с Gtk3 (опция -DUSE_GTK3 для cmake). Это экспериментальный режим. Возможны различные недоработки.
+* Добавлено распознавание дополнительных полей из файл-листов FlylinkDC++: битрейты аудио, видео и разрешение. Информация отображается в дополнительных столбцах.
 *** eiskaltdcpp-daemon ***
 * Добавлены опции командной строки: --verbose, --ip, --port, --rpclog, --uripath
 * Добавлен JSON интерфейс. Подробнее: http://code.google.com/p/eiskaltdc/wiki/JSONRPC
