@@ -5,6 +5,7 @@
 * Додані опції ядра: UseADLOnlyOnOwnList, AllowUploadOverMultiHubs, AllowSimUploads.
 * Додана можливість збірки з miniupnpc версії 1.6. Підтримка версії 1.5 збережена. Локальна копія miniupnpc оновлена ​​до версії 1.6.
 * Виправлено падіння програми при використанні зміненого значення IpTOSValue (за умовчанням -1) без прав суперкористувача.
+* Додано розпізнавання додаткових полів із файл-листів FlylinkDC++: бітрейти аудіо, відео та розрішення.
 *** eiskaltdcpp-qt ***
 * Рефакторинг сирцевого коду. Можливі регресії.
 * Тепер для сбiрки потрібен GCC >= 4.5.0. (Використовуються можливості c++0x)
@@ -16,9 +17,13 @@
   [Спасибі OmegaPhil за оновлену документацію]
 * Гаряче перезавантаження скриптів (QtScript), коли вони змінюються.
 * Діалог роботи зі скриптами (QtScript) істотно покращено.
+* Покращено спосіб сортування у віджеті пошукового шпигуна. [Спасибі Mikhail Krasikau]
+* Додано розпізнавання додаткових полів із файл-листів FlylinkDC++: бітрейти аудіо, відео та розрішення. Інформація відображається у тултiпi для файлу.
+* Додана можливість очищення пошукової історії та історії каталогів завантаження при виході або вручну.
 *** eiskaltdcpp-gtk ***
 * Підтримка збірки з Gtk < 2.24 припинена.
 * Додана можливість збірки з Gtk3 (опція -DUSE_GTK3 для cmake). Це експериментальний режим. Можливі різні недоробки.
+* Додано розпізнавання додаткових полів із файл-листів FlylinkDC++: бітрейти аудіо, відео та розрішення. Інформація відображається у додаткових стовпцях.
 *** eiskaltdcpp-daemon ***
 * Додані опції командного рядка: --verbose, --ip, --port, --rpclog, --uripath
 * Доданий JSON інтерфейс. докладніше: http://code.google.com/p/eiskaltdc/wiki/JSONRPC
